@@ -409,7 +409,8 @@ class CheckoutV2Test < Test::Unit::TestCase
           version: '1.0.2',
           eci: '05',
           cryptogram: '1234',
-          xid: '1234'
+          xid: '1234',
+          authentication_response_status: 'Y'
         }
       }
       @gateway.authorize(@amount, @credit_card, options)
@@ -433,7 +434,8 @@ class CheckoutV2Test < Test::Unit::TestCase
           version: '2.0.0',
           eci: '05',
           cryptogram: '1234',
-          ds_transaction_id: '1234'
+          ds_transaction_id: '1234',
+          authentication_response_status: 'Y'
         }
       }
       @gateway.authorize(@amount, @credit_card, options)
